--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>First project pushed to github</h1>
     <div>This is the first project I'm gonna use git on, and that I'm gonna push to git hub</div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis modi ipsa, adipisci, earum rem sed maiores nobis
+        sapiente omnis culpa, qui eligendi? Veniam in ducimus quo dicta laudantium libero blanditiis!
+    </p>
 </body>
 </html>
