added a nav bar

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis modi ipsa, adipisci, earum rem sed maiores nobis
         sapiente omnis culpa, qui eligendi? Veniam in ducimus quo dicta laudantium libero blanditiis!
     </p>
+    <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+    </ul>
 </body>
 </html>
